Fixes 4244: update